--- a/static-html/index.html
+++ b/static-html/index.html
@@ -116,23 +116,45 @@
                         <li class="address">
                             <a href="https://www.google.fr/maps/place/20+Rue+des+coquelicots+24750+TRÉLISSAC"
                                target="_blank">
+                                <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                     fill="currentColor">
+                                    <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+                                </svg>
                                 20 Rue des coquelicots<br>24750 TRÉLISSAC
                             </a>
                         </li>
                         <li class="phone">
-                            <a href="tel:05.33.82.00.23">05 33 82 00 23</a>
+                            <a href="tel:05.33.82.00.23">
+                                <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                     fill="currentColor">
+                                    <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+                                </svg>
+                                05 33 82 00 23
+                            </a>
                         </li>
                         <li class="email">
-                            <a href="mailto:fitnesspark24750@gmail.com">fitnesspark24750@gmail.com</a>
+                            <a href="mailto:fitnesspark24750@gmail.com">
+                                <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                     fill="currentColor">
+                                    <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                                </svg>
+                                fitnesspark24750@gmail.com
+                            </a>
                         </li>
                     </ul>
                     <div class="separator-small"></div>
                     <div class="social-links">
                         <a href="https://www.facebook.com/fitnessparktrelissac/" target="_blank">
-                            <img src="images/icons/facebook.svg" alt="Facebook">
+                            <svg class="icon-social" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                 fill="currentColor">
+                                <path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"/>
+                            </svg>
                         </a>
                         <a href="https://www.instagram.com/fitnessparktrelissac/" target="_blank">
-                            <img src="images/icons/instagram.svg" alt="Instagram">
+                            <svg class="icon-social" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                 fill="currentColor">
+                                <path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"/>
+                            </svg>
                         </a>
                         <span>Rejoins-nous</span>
                     </div>
@@ -141,6 +163,11 @@
             <div class="col-lg-4">
                 <div class="info-container">
                     <div class="hours-container">
+                        <svg class="icon-clock" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                             fill="currentColor">
+                            <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/>
+                            <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"/>
+                        </svg>
                         <div class="title-hours">SALLE</div>
                         <div class="separator-xs"></div>
                         <div class="hours-text">Ouvert 7J/7<br>06:00 - 23:00</div>
@@ -197,7 +224,10 @@
                 <div class="mobile-info-card">
                     <div class="contact-item">
                         <div class="contact-icon">
-                            <img src="images/icons/address.svg" alt="Address">
+                            <svg class="icon-mobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                 fill="currentColor">
+                                <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
+                            </svg>
                         </div>
                         <div class="contact-text">
                             <a href="https://www.google.fr/maps/place/20+Rue+des+coquelicots+24750+TRÉLISSAC"
@@ -209,7 +239,10 @@
 
                     <div class="contact-item">
                         <div class="contact-icon">
-                            <img src="images/icons/phone.svg" alt="Phone">
+                            <svg class="icon-mobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                 fill="currentColor">
+                                <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+                            </svg>
                         </div>
                         <div class="contact-text">
                             <a href="tel:05.33.82.00.23">05 33 82 00 23</a>
@@ -218,7 +251,10 @@
 
                     <div class="contact-item">
                         <div class="contact-icon">
-                            <img src="images/icons/email.svg" alt="Email">
+                            <svg class="icon-mobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                 fill="currentColor">
+                                <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                            </svg>
                         </div>
                         <div class="contact-text">
                             <a href="mailto:fitnesspark24750@gmail.com">fitnesspark24750@gmail.com</a>
@@ -229,7 +265,11 @@
 
                     <div class="contact-item">
                         <div class="contact-icon">
-                            <img src="images/icons/clock.svg" alt="Hours">
+                            <svg class="icon-mobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                 fill="currentColor">
+                                <path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"/>
+                                <path d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"/>
+                            </svg>
                         </div>
                         <div class="contact-text">
                             <div class="title-hours-mobile">SALLE</div>
@@ -258,10 +298,14 @@
 
                     <div class="social-links-mobile">
                         <a href="https://www.facebook.com/fitnessparktrelissac/" target="_blank">
-                            <img src="images/icons/facebook.svg" alt="Facebook">
+                            <svg class="icon-social-mobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"/>
+                            </svg>
                         </a>
                         <a href="https://www.instagram.com/fitnessparktrelissac/" target="_blank">
-                            <img src="images/icons/instagram.svg" alt="Instagram">
+                            <svg class="icon-social-mobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                            </svg>
                         </a>
                     </div>
 
