chore: minor fixes

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salle de sport Périgueux - Trélissac | Trelissac Fitness</title>
+    <title>Salle de sport Trėlissac Fitness</title>
     <meta name="description"
-          content="✅ Entraîne-toi dans la salle de sport Trelissac Fitness située près du C.C La Feuilleraie : Musculation, Cardio, Cours-collectifs | Accès de 6h à 23h.">
+          content="✅ Entraîne-toi dans la salle de sport Trélissac Fitness située près du C.C La Feuilleraie : Musculation, Cardio, Cours-collectifs | Accès de 6h à 23h.">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
-    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#ffd600">
     <link rel="shortcut icon" href="favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#ffd600">
     <meta name="msapplication-config" content="favicon/browserconfig.xml">
@@ -716,7 +714,10 @@
                     <img src="images/Access_Sismo.jpg" alt="Sismo" class="img-fluid">
                 </div>
                 <div class="option-text">
-                    <p>Remodèle ta silhouette en associant le cardio qui brûle les calories et la machine Sismo qui brûle les graisses. Son mouvement oscillatoire te permettra de compléter tes entraînements sans traumatisme pour le corps : le plateau de la machine effectue des balancements de gauche à droite rapides qui reproduisent les mouvements naturels de la marche.</p>
+                    <p>Remodèle ta silhouette en associant le cardio qui brûle les calories et la machine Sismo qui
+                        brûle les graisses. Son mouvement oscillatoire te permettra de compléter tes entraînements sans
+                        traumatisme pour le corps : le plateau de la machine effectue des balancements de gauche à
+                        droite rapides qui reproduisent les mouvements naturels de la marche.</p>
                 </div>
             </div>
             <div class="option-item">
@@ -724,7 +725,10 @@
                     <img src="images/powerplate.jpg" alt="Powerplate" class="img-fluid">
                 </div>
                 <div class="option-text">
-                    <p>Renforcement musculaire, diminution de la cellulite, amélioration de la circulation sanguine, atténuation des douleurs, augmentation de la densité osseuse... Atteins tes objectifs en 2 ou 3 séances de 10 minutes par semaine grâce au système de vibration de l'appareil qui permet de faire travailler tous les muscles sans que l'on s'en aperçoive !</p>
+                    <p>Renforcement musculaire, diminution de la cellulite, amélioration de la circulation sanguine,
+                        atténuation des douleurs, augmentation de la densité osseuse... Atteins tes objectifs en 2 ou 3
+                        séances de 10 minutes par semaine grâce au système de vibration de l'appareil qui permet de
+                        faire travailler tous les muscles sans que l'on s'en aperçoive !</p>
                 </div>
 
             </div>
@@ -733,7 +737,10 @@
                     <img src="images/Access_Hydromassage_307x307.jpg" alt="Hydromassage" class="img-fluid">
                 </div>
                 <div class="option-text">
-                    <p>Relaxe-toi après tes trainings avec le fauteuil Hydromassage. Véritable allié de ta récupération, il permettra en 10 minutes seulement de soulager tes tensions musculaires et d'apaiser douleurs articulaires et courbatures. Son avantage ? Il est adapté à tous et facile à utiliser. Alors, qu'attends-tu pour t'offrir un moment de pur bien-être ?</p>
+                    <p>Relaxe-toi après tes trainings avec le fauteuil Hydromassage. Véritable allié de ta récupération,
+                        il permettra en 10 minutes seulement de soulager tes tensions musculaires et d'apaiser douleurs
+                        articulaires et courbatures. Son avantage ? Il est adapté à tous et facile à utiliser. Alors,
+                        qu'attends-tu pour t'offrir un moment de pur bien-être ?</p>
                 </div>
 
             </div>
@@ -742,7 +749,11 @@
                     <img src="images/Access_Boditrax_307x307.jpg" alt="Boditrax" class="img-fluid">
                 </div>
                 <div class="option-text">
-                    <p>Mesure ta performance semaine après semaine ! 5 tests simples en seulement 4 minutes pour suivre ton évolution et l'atteinte de tes objectifs en 8 mesures (pourcentage de graisse et de muscle dans le corps, niveau d'hydratation, équilibre corporel...). Une fois les tests terminés, les résultats s'affichent immédiatement sur l'écran et sont également accessibles en ligne pour un meilleur suivi !</p>
+                    <p>Mesure ta performance semaine après semaine ! 5 tests simples en seulement 4 minutes pour suivre
+                        ton évolution et l'atteinte de tes objectifs en 8 mesures (pourcentage de graisse et de muscle
+                        dans le corps, niveau d'hydratation, équilibre corporel...). Une fois les tests terminés, les
+                        résultats s'affichent immédiatement sur l'écran et sont également accessibles en ligne pour un
+                        meilleur suivi !</p>
                 </div>
 
             </div>
@@ -751,7 +762,10 @@
                     <img src="images/Access_FP-Water-Station_307x307.jpg" alt="Water Station" class="img-fluid">
                 </div>
                 <div class="option-text">
-                    <p>Prends plaisir à te réhydrater avant, pendant et après l'effort avec nos eaux sportives. Disponibles en plusieurs saveurs naturelles et fruitées, remplies de vitamines, sans sucre ajouté et surtout très faibles en calories, nos boissons sportives vont devenir les indispensables de ta séance pour optimiser tes performances !</p>
+                    <p>Prends plaisir à te réhydrater avant, pendant et après l'effort avec nos eaux sportives.
+                        Disponibles en plusieurs saveurs naturelles et fruitées, remplies de vitamines, sans sucre
+                        ajouté et surtout très faibles en calories, nos boissons sportives vont devenir les
+                        indispensables de ta séance pour optimiser tes performances !</p>
                 </div>
 
             </div>
@@ -863,69 +877,6 @@
 
 <!-- Footer -->
 <footer class="site-footer">
-<!--    <div class="footer-top">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-9">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <h4>Rejoindre Trelissac Fitness</h4>
-                            <ul class="footer-links">
-                                <li><a href="#">Proposer un local</a></li>
-                                <li><a href="#">Devenir Franchisé</a></li>
-                                <li><a href="#">Devenir Master Franchisé</a></li>
-                                <li><a href="#">Offre spéciale entreprise</a></li>
-                                <li><a href="#">Recrutement</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3">
-                            <h4>Aide & Informations</h4>
-                            <ul class="footer-links">
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">Abonnements</a></li>
-                                <li><a href="#">Envie d'essayer nos salles ?</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3">
-                            <h4>Clubs</h4>
-                            <ul class="footer-links">
-                                <li><a href="#">Bordeaux</a></li>
-                                <li><a href="#">Lille</a></li>
-                                <li><a href="#">Lyon</a></li>
-                                <li><a href="#">Marseille</a></li>
-                                <li><a href="#">Nantes</a></li>
-                                <li><a href="#">Paris</a></li>
-                                <li><a href="#">Trélissac</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-3">
-                            <h4>Activités</h4>
-                            <ul class="footer-links">
-                                <li><a href="#">Fight Park</a></li>
-                                <li><a href="#">Burning Park</a></li>
-                                <li><a href="#">Cycle Park</a></li>
-                                <li><a href="#">Cross training</a></li>
-                                <li><a href="#">Cardio training</a></li>
-                                <li><a href="#">Cours collectifs</a></li>
-                                <li><a href="#">Musculation</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="footer-logo">
-                        <img src="images/logo.svg" alt="Trelissac Fitness">
-                    </div>
-                    <div class="footer-social">
-                        <a href="#"><img src="images/facebook-icon.svg" alt="Facebook"></a>
-                        <a href="#"><img src="images/instagram-icon.svg" alt="Instagram"></a>
-                        <a href="#"><img src="images/youtube-icon.svg" alt="YouTube"></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>-->
     <div class="footer-bottom">
         <div class="container">
             <div class="row">
