feat: better logo title

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -61,7 +61,7 @@
 
                     <!-- Site Title -->
                     <div class="site-title">
-                        Trélissac Fitness
+                        Trélissac <span class="color-primary">Fitness</span>
                     </div>
                 </div>
 
