feat: remove video

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -330,7 +330,7 @@
 <section id="concept" class="presentation-section">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-12">
                 <h2>Fitness Park Périgueux-Trélissac<br><strong>Club de sport, fitness<br> & remise en forme</strong>
                 </h2>
                 <div class="separator-small"></div>
@@ -344,13 +344,6 @@
                         Que ton objectif soit de te muscler, t'affiner ou te remettre en forme Fitness Park t'accompagne
                         dans ta réussite personnelle.</p>
                     <p>Comment accéder à la salle de sport ? Bus D. Arrêt : Les Jalots.</p>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/uf3iRWun358" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
                 </div>
             </div>
         </div>
