feat: change email

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -70,7 +70,7 @@
                     <nav class="main-navigation">
                         <ul class="nav-menu">
                             <li><a href="#concept">Concept</a></li>
-                            <li><a href="#">Abonnements</a></li>
+                            <li><a href="https://member.resamania.com/trelissacfitness/registration/offers">Abonnements</a></li>
                             <li><a href="#club-info">Le club</a></li>
                             <li><a href="#activities">Activités</a></li>
                         </ul>
@@ -88,7 +88,7 @@
                 <div class="collapse navbar-collapse" id="mainNavigation">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="#concept">Concept</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Abonnements</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://member.resamania.com/trelissacfitness/registration/offers">Abonnements</a></li>
                         <li class="nav-item"><a class="nav-link" href="#club-info">Le club</a></li>
                         <li class="nav-item"><a class="nav-link" href="#activities">Activités</a></li>
                     </ul>
@@ -135,12 +135,12 @@
                             </a>
                         </li>
                         <li class="email">
-                            <a href="mailto:fitnesspark24750@gmail.com">
+                            <a href="mailto:trelissacfitness@gmail.com">
                                 <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
                                      fill="currentColor">
                                     <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                                 </svg>
-                                fitnesspark24750@gmail.com
+                                trelissacfitness@gmail.com
                             </a>
                         </li>
                     </ul>
@@ -193,7 +193,7 @@
             <div class="col-lg-4">
                 <div class="info-container">
                     <div class="promo-banner">
-                        <a href="#abonnements">
+                        <a href="https://member.resamania.com/trelissacfitness/registration/offers">
                             <img src="images/promo-desktop.jpg" alt="Promotion" class="img-fluid">
                         </a>
                     </div>
@@ -206,7 +206,7 @@
 <!-- Desktop CTA Button (hidden on mobile) -->
 <section class="cta-section d-none d-lg-block">
     <div class="container text-center">
-        <a href="#abonnements" class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
+        <a href="https://member.resamania.com/trelissacfitness/registration/offers" class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
     </div>
 </section>
 
@@ -214,7 +214,7 @@
 <!-- Mobile CTA Button Section (visible only on mobile) -->
 <section class="mobile-cta-section d-lg-none">
     <div class="container text-center">
-        <a href="#abonnements" class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
+        <a href="https://member.resamania.com/trelissacfitness/registration/offers" class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
     </div>
 </section>
 
@@ -259,7 +259,7 @@
                             </svg>
                         </div>
                         <div class="contact-text">
-                            <a href="mailto:fitnesspark24750@gmail.com">fitnesspark24750@gmail.com</a>
+                            <a href="mailto:trelissacfitness@gmail.com">trelissacfitness@gmail.com</a>
                         </div>
                     </div>
 
@@ -312,7 +312,7 @@
                     </div>
 
                     <div class="promo-banner-mobile">
-                        <a href="#abonnements">
+                        <a href="https://member.resamania.com/trelissacfitness/registration/offers">
                             <img src="images/promo-mobile.jpg" alt="Promotion" class="img-fluid">
                         </a>
                     </div>
