--- a/static-html/index.html
+++ b/static-html/index.html
@@ -70,7 +70,7 @@
                     <nav class="main-navigation">
                         <ul class="nav-menu">
                             <li><a href="#concept">Concept</a></li>
-                            <li><a href="https://member.resamania.com/trelissacfitness/registration/offers">Abonnements</a></li>
+                            <li><a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank">Abonnements</a></li>
                             <li><a href="#club-info">Le club</a></li>
                             <li><a href="#activities">Activités</a></li>
                         </ul>
@@ -88,7 +88,7 @@
                 <div class="collapse navbar-collapse" id="mainNavigation">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="#concept">Concept</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://member.resamania.com/trelissacfitness/registration/offers">Abonnements</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank">Abonnements</a></li>
                         <li class="nav-item"><a class="nav-link" href="#club-info">Le club</a></li>
                         <li class="nav-item"><a class="nav-link" href="#activities">Activités</a></li>
                     </ul>
@@ -193,7 +193,7 @@
             <div class="col-lg-4">
                 <div class="info-container">
                     <div class="promo-banner">
-                        <a href="https://member.resamania.com/trelissacfitness/registration/offers">
+                        <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank">
                             <img src="images/promo-desktop.jpg" alt="Promotion" class="img-fluid">
                         </a>
                     </div>
@@ -206,7 +206,7 @@
 <!-- Desktop CTA Button (hidden on mobile) -->
 <section class="cta-section d-none d-lg-block">
     <div class="container text-center">
-        <a href="https://member.resamania.com/trelissacfitness/registration/offers" class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
+        <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank" class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
     </div>
 </section>
 
@@ -214,7 +214,7 @@
 <!-- Mobile CTA Button Section (visible only on mobile) -->
 <section class="mobile-cta-section d-lg-none">
     <div class="container text-center">
-        <a href="https://member.resamania.com/trelissacfitness/registration/offers" class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
+        <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank" class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
     </div>
 </section>
 
@@ -312,7 +312,7 @@
                     </div>
 
                     <div class="promo-banner-mobile">
-                        <a href="https://member.resamania.com/trelissacfitness/registration/offers">
+                        <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank">
                             <img src="images/promo-mobile.jpg" alt="Promotion" class="img-fluid">
                         </a>
                     </div>
