--- a/static-html/index.html
+++ b/static-html/index.html
@@ -18,7 +18,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,100..900;1,62.5..100,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,100..900;1,62.5..100,100..900&display=swap"
+          rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -70,7 +71,8 @@
                     <nav class="main-navigation">
                         <ul class="nav-menu">
                             <li><a href="#concept">Concept</a></li>
-                            <li><a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank">Abonnements</a></li>
+                            <li><a href="https://member.resamania.com/trelissacfitness/registration/offers"
+                                   target="_blank">Abonnements</a></li>
                             <li><a href="#club-info">Le club</a></li>
                             <li><a href="#activities">Activités</a></li>
                         </ul>
@@ -88,7 +90,9 @@
                 <div class="collapse navbar-collapse" id="mainNavigation">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="#concept">Concept</a></li>
-                        <li class="nav-item"><a class="nav-link" href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank">Abonnements</a></li>
+                        <li class="nav-item"><a class="nav-link"
+                                                href="https://member.resamania.com/trelissacfitness/registration/offers"
+                                                target="_blank">Abonnements</a></li>
                         <li class="nav-item"><a class="nav-link" href="#club-info">Le club</a></li>
                         <li class="nav-item"><a class="nav-link" href="#activities">Activités</a></li>
                     </ul>
@@ -206,7 +210,8 @@
 <!-- Desktop CTA Button (hidden on mobile) -->
 <section class="cta-section d-none d-lg-block">
     <div class="container text-center">
-        <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank" class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
+        <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank"
+           class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
     </div>
 </section>
 
@@ -214,7 +219,8 @@
 <!-- Mobile CTA Button Section (visible only on mobile) -->
 <section class="mobile-cta-section d-lg-none">
     <div class="container text-center">
-        <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank" class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
+        <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank"
+           class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
     </div>
 </section>
 
@@ -300,12 +306,14 @@
 
                     <div class="social-links-mobile">
                         <a href="https://www.facebook.com/fitnessparktrelissac/" target="_blank">
-                            <svg class="icon-social-mobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                            <svg class="icon-social-mobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                 fill="currentColor">
                                 <path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"/>
                             </svg>
                         </a>
                         <a href="https://www.instagram.com/fitnessparktrelissac/" target="_blank">
-                            <svg class="icon-social-mobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                            <svg class="icon-social-mobile" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+                                 fill="currentColor">
                                 <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
                             </svg>
                         </a>
@@ -765,81 +773,6 @@
                         indispensables de ta séance pour optimiser tes performances !</p>
                 </div>
 
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- FAQ Section -->
-<section class="faq-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h2>Questions &<br><strong>Réponses</strong></h2>
-
-                <div class="accordion" id="faqAccordion">
-                    <div class="accordion-item">
-                        <h3 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#faq1">
-                                Quelles sont les activités proposées dans les clubs Fitness Park ?
-                            </button>
-                        </h3>
-                        <div id="faq1" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                            <div class="accordion-body">
-                                <p>Nous proposons dans tous les clubs Fitness Park un espace <a href="#">Musculation</a>,
-                                    <a href="#">Cardio</a> & <a href="#">Cross-Training</a> afin que tu puisses venir
-                                    t'entraîner dans les meilleurs conditions.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="accordion-item">
-                        <h3 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#faq2">
-                                Quelles sont les offres proposées dans les salles de sport Fitness Park ?
-                            </button>
-                        </h3>
-                        <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                            <div class="accordion-body">
-                                <p>Fitness Park te propose plusieurs offres au choix dès 19€/ 4 semaines* : Avec ou Sans
-                                    Engagement avec l'offre classique, Access + et Ultimate et l'offre Jeunes. <a
-                                            href="#">Découvre-les</a> !</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="accordion-item">
-                        <h3 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#faq3">
-                                Quels sont les cours collectifs proposés dans le club Fitness Park de Trélissac ?
-                            </button>
-                        </h3>
-                        <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                            <div class="accordion-body">
-                                <p>Nous proposons 8 cours collectifs différents, il ne te reste plus qu'à choisir !
-                                    Découvre les activités</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="accordion-item">
-                        <h3 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#faq4">
-                                Est-il possible de pratiquer la boxe dans le Fitness Park de Trélissac ?
-                            </button>
-                        </h3>
-                        <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                            <div class="accordion-body">
-                                <p>Un espace boxing avec sacs de frappe est disponible en libre accès. Tu peux t'y
-                                    entraîner de 6h à 23h !</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
