feat: remove club info icons

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -359,39 +359,46 @@
 </section>
 
 <!-- Practical Information Section -->
-<section id="club-info" class="info-practical-section">
+<section id="club-info" class="services-info-section">
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h3 class="section-title">INFORMATIONS PRATIQUES</h3>
-                <ul class="practical-info-list">
+                <h3 class="services-info-section-title">INFORMATIONS PRATIQUES</h3>
+                <ul class="services-info-list practical-list">
                     <li>
-                        <img src="images/icons/parking.svg" alt="Parking">
-                        <span>Parking gratuit</span>
+                        <div>
+                            <span>Parking gratuit</span>
+                        </div>
                     </li>
                     <li>
-                        <img src="images/icons/climatisation.svg" alt="Climatisation">
-                        <span>Climatisation</span>
+                        <div>
+                            <span>Climatisation</span>
+                        </div>
                     </li>
                     <li>
-                        <img src="images/icons/casier_recharge.svg" alt="Casier">
-                        <span>Casier de recharge téléphonique</span>
+                        <div>
+                            <span>Douche individuelle</span>
+                        </div>
                     </li>
                     <li>
-                        <img src="images/icons/douche_individuelle.svg" alt="Douche">
-                        <span>Douche individuelle</span>
+                        <div>
+                            <span>Produit désinfectant</span>
+                        </div>
                     </li>
                     <li>
-                        <img src="images/icons/produit_desinfectant.svg" alt="Désinfectant">
-                        <span>Produit désinfectant</span>
+                        <div>
+                            <span>Wifi gratuit</span>
+                        </div>
                     </li>
                     <li>
-                        <img src="images/icons/wifi_gratuit.svg" alt="WiFi">
-                        <span>Wifi gratuit</span>
+                        <div>
+                            <span>Distributeur automatique</span>
+                        </div>
                     </li>
                     <li>
-                        <img src="images/icons/distributeur_automatique.svg" alt="Distributeur">
-                        <span>Distributeur automatique</span>
+                        <div>
+                            <span>Casier de recharge téléphonique</span>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -400,51 +407,44 @@
 </section>
 
 <!-- Club Services Section -->
-<section class="services-section">
+<section class="services-info-section">
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h3 class="section-title">SERVICES DU CLUB</h3>
-                <ul class="services-list">
+                <h3 class="services-info-section-title">SERVICES DU CLUB</h3>
+                <ul class="services-info-list services-list">
                     <li>
                         <div>
-                            <img src="images/icons/musculation.svg" alt="Musculation">
                             <span>Musculation</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/cardio_training.svg" alt="Cardio">
                             <span>Cardio training</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/biking.svg" alt="Biking">
                             <span>Biking</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/espace_abdos_stretching.svg" alt="Abdos">
                             <span>Espace Abdos Stretching</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/espace_mobilite.svg" alt="Mobilité">
                             <span>Espace mobilité</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/cours_collectifs_coaches.svg" alt="Cours">
                             <span>Cours collectifs coachés</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/cours_video.svg" alt="Vidéo">
                             <span>Cours vidéo</span>
                         </div>
                     </li>
@@ -455,63 +455,54 @@
 </section>
 
 <!-- Highlights Section -->
-<section class="highlights-section">
+<section class="services-info-section">
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h3 class="section-title">LES POINTS FORTS</h3>
-                <ul class="highlights-list">
+                <h3 class="services-info-section-title">LES POINTS FORTS</h3>
+                <ul class="services-info-list highlights-list">
                     <li>
                         <div>
-                            <img src="images/icons/cross_training.svg" alt="Cross Training">
                             <span>Cross training</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/programme_entrainement.svg" alt="Programme">
                             <span>Programme d'entraînement personnalisé*</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/hydromassage.svg" alt="Hydromassage">
                             <span>Hydromassage*</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/espace_detente.svg" alt="Détente">
                             <span>Espace détente</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/yanga.svg" alt="Yanga">
                             <span>Station d'hydratation Yanga*</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/sismo.svg" alt="Sismo">
                             <span>Plateforme Oscillante Sismo*</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/equipements_haut_de_gamme.svg" alt="Équipements">
                             <span>Equipements haut de gamme</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/service_de_qualite.svg" alt="Service">
                             <span>Service de qualité</span>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <img src="images/icons/libre_acces.svg" alt="Accès">
                             <span>Libre accès dans tout le réseau</span>
                         </div>
                     </li>
