--- a/static-html/index.html
+++ b/static-html/index.html
@@ -707,7 +707,7 @@
         <div class="options-slider">
             <div class="option-item">
                 <div class="option-image">
-                    <img src="images/Access_Sismo.jpg" alt="Sismo" class="img-fluid">
+                    <img src="images/Access_Sismo.jpg" alt="Sismo" class="img-fluid" width="307" height="307">
                 </div>
                 <div class="option-text">
                     <p>Remodèle ta silhouette en associant le cardio qui brûle les calories et la machine Sismo qui
@@ -718,19 +718,7 @@
             </div>
             <div class="option-item">
                 <div class="option-image">
-                    <img src="images/powerplate.jpg" alt="Powerplate" class="img-fluid">
-                </div>
-                <div class="option-text">
-                    <p>Renforcement musculaire, diminution de la cellulite, amélioration de la circulation sanguine,
-                        atténuation des douleurs, augmentation de la densité osseuse... Atteins tes objectifs en 2 ou 3
-                        séances de 10 minutes par semaine grâce au système de vibration de l'appareil qui permet de
-                        faire travailler tous les muscles sans que l'on s'en aperçoive !</p>
-                </div>
-
-            </div>
-            <div class="option-item">
-                <div class="option-image">
-                    <img src="images/Access_Hydromassage_307x307.jpg" alt="Hydromassage" class="img-fluid">
+                    <img src="images/Access_Hydromassage_307x307.jpg" alt="Hydromassage" class="img-fluid" width="307" height="307">
                 </div>
                 <div class="option-text">
                     <p>Relaxe-toi après tes trainings avec le fauteuil Hydromassage. Véritable allié de ta récupération,
@@ -738,32 +726,17 @@
                         articulaires et courbatures. Son avantage ? Il est adapté à tous et facile à utiliser. Alors,
                         qu'attends-tu pour t'offrir un moment de pur bien-être ?</p>
                 </div>
-
             </div>
             <div class="option-item">
                 <div class="option-image">
-                    <img src="images/Access_Boditrax_307x307.jpg" alt="Boditrax" class="img-fluid">
+                    <img src="images/Access_Yanga_FR_307x307.jpg" alt="Water Station" class="img-fluid" width="307" height="307">
                 </div>
                 <div class="option-text">
-                    <p>Mesure ta performance semaine après semaine ! 5 tests simples en seulement 4 minutes pour suivre
-                        ton évolution et l'atteinte de tes objectifs en 8 mesures (pourcentage de graisse et de muscle
-                        dans le corps, niveau d'hydratation, équilibre corporel...). Une fois les tests terminés, les
-                        résultats s'affichent immédiatement sur l'écran et sont également accessibles en ligne pour un
-                        meilleur suivi !</p>
+                    <p>Prends plaisir à réhydrater ton corps avant et après l'effort avec l'eau sportive Yanga. Avec
+                        moins de 5 Kcal par gourde, sans colorants ni sucres ajoutés, tu vas adorer les parfums
+                        proposés. Grâce aux bienfaits des vitamines B1, B3, B5, B6 et B8, Yanga est une véritable source
+                        d'énergie qui améliore le métabolisme des protéines, glucides et graisses.</p>
                 </div>
-
-            </div>
-            <div class="option-item">
-                <div class="option-image">
-                    <img src="images/Access_FP-Water-Station_307x307.jpg" alt="Water Station" class="img-fluid">
-                </div>
-                <div class="option-text">
-                    <p>Prends plaisir à te réhydrater avant, pendant et après l'effort avec nos eaux sportives.
-                        Disponibles en plusieurs saveurs naturelles et fruitées, remplies de vitamines, sans sucre
-                        ajouté et surtout très faibles en calories, nos boissons sportives vont devenir les
-                        indispensables de ta séance pour optimiser tes performances !</p>
-                </div>
-
             </div>
         </div>
     </div>
