--- a/static-html/index.html
+++ b/static-html/index.html
@@ -108,7 +108,7 @@
         <!-- Hero Title Area -->
         <div class="row">
             <div class="col-12 text-center hero-background">
-                <h1><strong>SALLE DE SPORT</strong> PÉRIGUEUX</h1>
+                <h1><strong>Salle De Sport</strong> Trėlissac Fitness</h1>
                 <div class="separator"></div>
                 <h2>Musculation, Fitness, Cours-Collectifs, Cross-Training, Biking & Cardio-Training</h2>
             </div>
@@ -339,17 +339,18 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2>Fitness Park Périgueux-Trélissac<br><strong>Club de sport, fitness<br> & remise en forme</strong>
+                <h2>Trėlissac Fitness<br><strong>Club de sport, fitness<br> & remise en forme</strong>
                 </h2>
                 <div class="separator-small"></div>
                 <div class="presentation-text">
-                    <p>Découvre le club Fitness Park Périgueux-Trélissac situé à proximité de Périgueux dans le Centre
+                    <p>Découvre le club Trėlissac Fitness situé à proximité de Périgueux dans le Centre
                         Commercial La Feuilleraie. Réparti sur plus de 1300m², le club t'offre un large choix
                         d'activités et d'équipements Technogym pour t'entraîner efficacement : <strong><a
                                 href="#espace_muscu">musculation</a></strong>, <strong><a href="#espace_cardio">cardio-training</a></strong>,
                         <strong><a href="#espace_coursco">cours collectifs</a></strong>, <strong><a
                                 href="#espace_supp_1">cross-training</a></strong> et <strong><a href="#espace_supp_2">biking</a></strong>.
-                        Que ton objectif soit de te muscler, t'affiner ou te remettre en forme Fitness Park t'accompagne
+                        Que ton objectif soit de te muscler, t'affiner ou te remettre en forme Trėlissac Fitness
+                        t'accompagne
                         dans ta réussite personnelle.</p>
                     <p>Comment accéder à la salle de sport ? Bus D. Arrêt : Les Jalots.</p>
                 </div>
@@ -533,7 +534,7 @@
         <h2>ACTIVITÉS</h2>
         <div class="separator-center"></div>
         <p class="activities-intro">
-            Le club de sport Fitness Park Périgueux-Trélissac t'accueille sur 1300m² d'espace de pratique : musculation,
+            Le club de sport Trėlissac Fitness t'accueille sur 1300m² d'espace de pratique : musculation,
             cardio, cross-training, biking. Plus de à 80 machines et équipements Technogym, disponibles en libre accès
             7J/7 - de 6h à 23h. Retrouve des coachs sportifs disponibles pour tous tes entraînements.
         </p>
@@ -549,7 +550,7 @@
                 <div class="separator-small"></div>
                 <div class="activity-text">
                     <p>Retrouve un espace de 280m² pour tes séances. Des programmes de base aux plus complexes, la salle
-                        de musculation Fitness Park Périgueux-Trélissac est équipée de machines de musculation dernière
+                        de musculation Trėlissac Fitness est équipée de machines de musculation dernière
                         génération Technogym et Hammer Strength pour dépasser tes limites lors de tes entraînements.</p>
                     <p>Débute la musculation dans les meilleures conditions. Nos machines de fitness à charges guidées
                         te permettent d'évoluer pour atteindre tes objectifs fitness. Progresse avec une préparation
@@ -585,7 +586,7 @@
                 <div class="activity-text text-md-right">
                     <p>Travaille l'ensemble du corps et améliore ta condition physique générale dans l'espace dédié aux
                         entraînements cardio-training. Entraîne-toi pour te remettre en forme, brûler un maximum de
-                        calories, perdre du poids et développer ton endurance. Fitness Park Périgueux-Trélissac met à
+                        calories, perdre du poids et développer ton endurance. Trėlissac Fitness met à
                         disposition les meilleurs équipements de fitness et de cardio Technogym pour atteindre tous tes
                         objectifs fitness : rameurs, vélos elliptiques, simulateurs d'escaliers ou encore tapis de
                         course. Choisis l'excellence pour t'entraîner dans des conditions optimales !</p>
@@ -594,8 +595,7 @@
                         personnel pour rapidement progresser. Que tu sois à la recherche d'une meilleure forme physique
                         ou d'une silhouette affinée, le cardio-training est la discipline à privilégier. Elle permet de
                         tonifier les muscles et d'augmenter la résistance à l'effort. Pour compléter tes exercices
-                        cardio, utilise la plateforme d'oscillation SISMO présente dans le club Fitness Park
-                        Périgueux-Trélissac.</p>
+                        cardio, utilise la plateforme d'oscillation SISMO présente dans le club Trėlissac Fitness.</p>
                 </div>
                 <div class="show-more d-md-none">
                     <span class="fa fa-chevron-down"></span> Lire la suite
@@ -617,12 +617,13 @@
                     <p>Travaille ton cardio, tes fessiers, ton endurance, ta souplesse ou encore tes abdos grâce aux
                         cours collectifs vidéos accessibles en libre-service sur écran géant. Varie tes entrainements et
                         progresse à ton rythme grâce à une gamme de cours collectifs diversifiées : Body Pump, Body
-                        Combat, Body Balance, Sh'Bam, yoga ou encore pilate. Avec ton pass Fitness Park, tu peux accéder
+                        Combat, Body Balance, Sh'Bam, yoga ou encore pilate. Avec ton pass Trėlissac Fitness, tu peux
+                        accéder
                         en illimité à tous les cours.</p>
                     <p>Les cours collectifs sont le meilleur moyen pour reprendre le sport et d'entretenir ta forme
                         physique. Avec plus de 160 cours vidéos répartis sur l'ensemble de la semaine, tu peux réaliser
                         tes séances à n'importe quel moment. A toi de choisir en fonction de tes objectifs et de tes
-                        envies ! En complément des cours vidéos, Fitness Park Périgueux-Trélissac, propose des cours
+                        envies ! En complément des cours vidéos, Trėlissac Fitness, propose des cours
                         encadrés par des coachs pour t'accompagner, te conseiller et te pousser dans tes
                         retranchements.</p>
                 </div>
@@ -644,8 +645,8 @@
                 <h3 class="text-md-right">Espace Cross-Training<br><strong>Repousse tes limites</strong></h3>
                 <div class="activity-text text-md-right">
                     <p>Enchaîne pull-up, push-up et dead-lift à force de détermination et d'abnégation. Créer des
-                        parcours d'entraînement personnalisés et réveille l'athlète qui sommeille en toi. Fitness Park
-                        Périgueux-Trélissac met à disposition et en libre accès, une box pensée pour pratiquer le
+                        parcours d'entraînement personnalisés et réveille l'athlète qui sommeille en toi. Trėlissac
+                        Fitness met à disposition et en libre accès, une box pensée pour pratiquer le
                         cross-training en illimité. Retrouve barres de traction, kettlebells, rack à squat, TRX, box
                         jump, wall-balls et powerbags pour des séances de cross-training intenses et variées.</p>
                     <p>Mélangeant musculation, haltérophilie et mouvement de gymnastique, le cross-training ne t'offre
@@ -675,8 +676,8 @@
                     <p>Accessible à tous, cette discipline tendance te permet d'améliorer ta condition physique et tes
                         performances rapidement. Cet entraînement RPM de haute intensité est rythmé par une ambiance
                         sonore qui t'accompagne pendant l'effort physique, idéal pour te motiver. Conçu pour tous les
-                        pratiquants ayant des exigences sportives, l'espace spinning du club de sport Fitness Park
-                        Périgueux-Trélissac propose un équipement innovant dans un environnement totalement
+                        pratiquants ayant des exigences sportives, l'espace spinning du club de sport Trėlissac Fitness
+                        propose un équipement innovant dans un environnement totalement
                         immersif.</p>
                     <p>Dépense calorique et dépassement de soi garantie : le spinning est conçu pour brûler un maximum
                         de graisses en un temps record : 600 calories/45 minutes. Défoule-toi et renforce tes capacités
@@ -718,7 +719,8 @@
             </div>
             <div class="option-item">
                 <div class="option-image">
-                    <img src="images/Access_Hydromassage_307x307.jpg" alt="Hydromassage" class="img-fluid" width="307" height="307">
+                    <img src="images/Access_Hydromassage_307x307.jpg" alt="Hydromassage" class="img-fluid" width="307"
+                         height="307">
                 </div>
                 <div class="option-text">
                     <p>Relaxe-toi après tes trainings avec le fauteuil Hydromassage. Véritable allié de ta récupération,
@@ -729,7 +731,8 @@
             </div>
             <div class="option-item">
                 <div class="option-image">
-                    <img src="images/Access_Yanga_FR_307x307.jpg" alt="Water Station" class="img-fluid" width="307" height="307">
+                    <img src="images/Access_Yanga_FR_307x307.jpg" alt="Water Station" class="img-fluid" width="307"
+                         height="307">
                 </div>
                 <div class="option-text">
                     <p>Prends plaisir à réhydrater ton corps avant et après l'effort avec l'eau sportive Yanga. Avec
