feat: change CTA colors

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -198,7 +198,7 @@
                 <div class="info-container">
                     <div class="promo-banner">
                         <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank">
-                            <img src="images/promo-desktop.jpg" alt="Promotion" class="img-fluid">
+                            <img src="images/promo-desktop.png" alt="Promotion" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -208,7 +208,7 @@
 </section>
 
 <!-- Desktop CTA Button (hidden on mobile) -->
-<section class="cta-section d-none d-lg-block">
+<section class="cta-section">
     <div class="container text-center">
         <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank"
            class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
@@ -216,14 +216,6 @@
 </section>
 
 <!-- Mobile sections start just after the hero section -->
-<!-- Mobile CTA Button Section (visible only on mobile) -->
-<section class="mobile-cta-section d-lg-none">
-    <div class="container text-center">
-        <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank"
-           class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
-    </div>
-</section>
-
 <!-- Mobile Information Section (visible only on mobile) -->
 <section class="mobile-info-section d-lg-none">
     <div class="container">
