feat: add link to notification banner

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -37,10 +37,10 @@
 <!-- Header -->
 <header class="site-header">
     <!-- Notification Banner -->
-    <div class="notification-banner">
+    <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank" class="notification-banner">
         <p>🔥 Offre spéciale : Les 4 premières semaines à 19€</p>
         <button class="close-btn">&times;</button>
-    </div>
+    </a>
 
     <div class="main-header">
         <div class="container-fluid px-2">
