feat: add logo to hero block

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -108,8 +108,7 @@
         <!-- Hero Title Area -->
         <div class="row">
             <div class="col-12 text-center hero-background">
-                <h1><strong>Salle De Sport</strong> Trėlissac Fitness</h1>
-                <div class="separator"></div>
+                <img src="images/hero-logo.png" alt="Trélissac Fitness" class="hero-logo">
                 <h2>Musculation, Fitness, Cours-Collectifs, Cross-Training, Biking & Cardio-Training</h2>
             </div>
         </div>
@@ -331,8 +330,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2>Trėlissac Fitness<br><strong>Club de sport, fitness<br> & remise en forme</strong>
-                </h2>
+                <h1>Trėlissac Fitness<br><strong>Club de sport, fitness<br> & remise en forme</strong>
+                </h1>
                 <div class="separator-small"></div>
                 <div class="presentation-text">
                     <p>Découvre le club Trėlissac Fitness situé à proximité de Périgueux dans le Centre
