feat: change promo banner

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -12,9 +12,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="shortcut icon" href="favicon/favicon.ico">
-    <meta name="msapplication-TileColor" content="#ffd600">
+    <meta name="msapplication-TileColor" content="#4884D9">
     <meta name="msapplication-config" content="favicon/browserconfig.xml">
-    <meta name="theme-color" content="#ffd600">
+    <meta name="theme-color" content="#4884D9">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -307,7 +307,7 @@
 
                     <div class="promo-banner-mobile">
                         <a href="https://member.resamania.com/trelissacfitness/registration/offers" target="_blank">
-                            <img src="images/promo-mobile.jpg" alt="Promotion" class="img-fluid">
+                            <img src="images/promo-desktop.png" alt="Promotion" class="img-fluid">
                         </a>
                     </div>
 
