feat: change gallery images

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -503,14 +503,12 @@
 <!-- Photo Gallery Section -->
 <section class="gallery-section">
     <div class="gallery-slider">
-        <div><img src="images/gallery/img1.jpg" alt="Salle de sport"></div>
-        <div><img src="images/gallery/img2.jpg" alt="Musculation"></div>
-        <div><img src="images/gallery/img3.jpg" alt="Cardio"></div>
-        <div><img src="images/gallery/img4.jpg" alt="Cours collectifs"></div>
-        <div><img src="images/gallery/img5.jpg" alt="Cross training"></div>
-        <div><img src="images/gallery/img6.jpg" alt="Biking"></div>
-        <div><img src="images/gallery/img7.jpg" alt="Équipements"></div>
-        <div><img src="images/gallery/img8.jpg" alt="Espace détente"></div>
+        <div><img src="images/gallery/image00001.png" alt="Salle de sport"></div>
+        <div><img src="images/gallery/image00002.png" alt="Musculation"></div>
+        <div><img src="images/gallery/image00003.png" alt="Cardio"></div>
+        <div><img src="images/gallery/image00004.png" alt="Cours collectifs"></div>
+        <div><img src="images/gallery/image00005.png" alt="Cross training"></div>
+        <div><img src="images/gallery/image00006.png" alt="Biking"></div>
     </div>
 </section>
 
