feat: change promo image

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -192,7 +192,7 @@
                 <div class="info-container">
                     <div class="promo-banner">
                         <a href="https://member.resamania.com/trelissacfitness/registration" target="_blank">
-                            <img src="images/promo-desktop.png" alt="Promotion" class="img-fluid">
+                            <img src="images/promo-w.png" alt="Promotion" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -307,7 +307,7 @@
 
                     <div class="promo-banner-mobile">
                         <a href="https://member.resamania.com/trelissacfitness/registration" target="_blank">
-                            <img src="images/promo-desktop.png" alt="Promotion" class="img-fluid">
+                            <img src="images/promo-b.png" alt="Promotion" class="img-fluid">
                         </a>
                     </div>
 
