feat: change yanga image

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -715,7 +715,7 @@
             </div>
             <div class="option-item">
                 <div class="option-image">
-                    <img src="images/Access_Yanga_FR_307x307.jpg" alt="Water Station" class="img-fluid" width="307"
+                    <img src="images/yanga.png" alt="Water Station" class="img-fluid" width="307"
                          height="307">
                 </div>
                 <div class="option-text">
