feat: add cookie banner

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="css/presentation.css">
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="css/options.css">
+    <link rel="stylesheet" href="css/cookie-banner.css">
 </head>
 <body>
 
@@ -777,5 +778,20 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 <script src="js/main.js"></script>
+
+<!-- Cookie Consent Banner -->
+<div id="cookie-banner" class="cookie-banner">
+    <div class="cookie-content">
+        <div class="cookie-text">
+            <p>En poursuivant votre navigation sur ce site, vous acceptez l'utilisation de cookies pour améliorer votre expérience utilisateur et réaliser des statistiques de visites.</p>
+        </div>
+        <div class="cookie-buttons">
+            <button id="cookie-accept" class="btn-cookie-accept">Accepter</button>
+            <button id="cookie-decline" class="btn-cookie-decline">Refuser</button>
+            <a href="cgv.html" class="cookie-learn-more">En savoir plus</a>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
