feat: add planning popup

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="css/gallery.css">
     <link rel="stylesheet" href="css/options.css">
     <link rel="stylesheet" href="css/cookie-banner.css">
+    <link rel="stylesheet" href="css/planning.css">
 </head>
 <body>
 
@@ -185,7 +186,7 @@
                             Samedi 09:00 - 14:00<br>
                             Fermé le dimanche
                         </div>
-                        <a href="docs/planning.pdf" target="_blank" class="btn btn-planning">Voir le planning</a>
+                        <a href="#" target="_blank" class="btn btn-planning">Voir le planning</a>
                     </div>
                 </div>
             </div>
@@ -193,7 +194,7 @@
                 <div class="info-container">
                     <div class="promo-banner">
                         <a href="https://member.resamania.com/trelissacfitness/registration" target="_blank">
-                            <img src="images/promo-w.png" alt="Promotion" class="img-fluid">
+                            <img src="images/promo-1003.png" alt="Promotion" class="img-fluid">
                         </a>
                     </div>
                 </div>
@@ -308,12 +309,12 @@
 
                     <div class="promo-banner-mobile">
                         <a href="https://member.resamania.com/trelissacfitness/registration" target="_blank">
-                            <img src="images/promo-b.png" alt="Promotion" class="img-fluid">
+                            <img src="images/promo-1003.png" alt="Promotion" class="img-fluid">
                         </a>
                     </div>
 
                     <div class="planning-btn-container">
-                        <a href="docs/planning.pdf" target="_blank" class="btn btn-planning-mobile">VOIR LE PLANNING</a>
+                        <a href="#" target="_blank" class="btn btn-planning-mobile">VOIR LE PLANNING</a>
                     </div>
                 </div>
             </div>
