--- a/static-html/cgv.html
+++ b/static-html/cgv.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/legal.css">
+    <link rel="stylesheet" href="css/planning.css">
 </head>
 <body>
 
@@ -244,10 +245,7 @@
                     <ul class="legal-links">
                         <li><a href="#">Mentions légales</a></li>
                         <li><a href="cgv.html">CGV</a></li>
-                        <li><a href="#">CGU</a></li>
-                        <li><a href="#">Plan du site</a></li>
                         <li><a href="#">Politique de confidentialité</a></li>
-                        <li><a href="#">Paramétrer les cookies</a></li>
                     </ul>
                 </div>
             </div>
