feat: Change booking link text

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -79,7 +79,7 @@
                 <!-- Third column: CTA Button (aligned right) -->
                 <div class="col-4 col-lg-3 d-flex justify-content-end">
                     <div class="header-cta">
-                        <a href="https://member.resamania.com/trelissacfitness/registration" class="btn btn-inscription">S'inscrire</a>
+                        <a href="https://member.resamania.com/trelissacfitness/registration" class="btn btn-inscription">Je m'inscris</a>
                     </div>
                 </div>
 
@@ -207,7 +207,7 @@
 <section class="cta-section">
     <div class="container text-center">
         <a href="https://member.resamania.com/trelissacfitness/registration" target="_blank"
-           class="btn btn-hero-cta">VOIR LES ABONNEMENTS</a>
+           class="btn btn-hero-cta">Je m'inscris</a>
     </div>
 </section>
 
