feat: better hero title formatting

--- a/static-html/index.html
+++ b/static-html/index.html
@@ -106,7 +106,8 @@
         <div class="row">
             <div class="col-12 text-center hero-background">
                 <img src="images/hero-logo.png" alt="Trélissac Fitness" class="hero-logo">
-                <h2>Musculation, Fitness, Cours-Collectifs, Cross-Training, Biking & Cardio-Training</h2>
+                <h2>Musculation, Fitness, Cours-Collectifs, <br />
+                    Cross-Training, Biking & Cardio-Training</h2>
             </div>
         </div>
 
